# cuda_gpt

./: CLAUDE.md  CMakeLists.txt  HOW_TO_TRAIN.md  README.md  SMART_MODEL_SUMMARY.md  chat.cu  combine_training_data.py  create_smart_dataset.py  demo_conversation.py  final_intelligence_test.py  generate_training_data.py  main.cu  safe_main.cu  test_chat.sh  test_smart_model.py
.claude/: settings.local.json
data/: combined_train.txt  conversations.txt  intelligent_train.txt  new_train.txt  smart_train.txt  train.txt
include/: attention.h  tensor.h  training.h  transformer.h
src/: attention.cu  tensor.cu  training.cu  transformer.cu
